--- a/01-metadata.html
+++ b/01-metadata.html
@@ -1,1 +1,4 @@
-<!-- HTML 코드를 작성해 주세요. -->
+<!-- <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"> HTML 4.01 버전임을 명시
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> xhtml 1.0 버전임을 명시 -->
+
+<!DOCTYPE html> <!-- 최신 html 버전임을 명시 -->
