--- a/01-metadata.html
+++ b/01-metadata.html
@@ -2,3 +2,23 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> xhtml 1.0 버전임을 명시 -->
 
 <!DOCTYPE html> <!-- 최신 html 버전임을 명시 -->
+<html lang="ko-KR">
+  <head>
+    <!-- HTML5 charset 설정 방식 -->
+    <meta charset="UTF-8" />
+    <meta name="author" content="윤진" />
+    <meta name="keywords" content="웹표준,웹접근성,HTML5" />
+    <meta name="description" content="멋쟁이 사자처럼과 이듬이 함께하는 프론트엔드 개발 스쿨" />
+    <!-- <meta http-equiv="refresh" content="3" /> -->
+
+    <meta property="og:title" content="콘텐츠 제목" /> 
+    <meta property="og:url" content="웹페이지 URL" />
+    <meta property="og:type" content="웹페이지 타입(blog, website 등)" />
+    <meta property="og:image" content="표시되는 이미지" /> 
+    <meta property="og:title" content="웹사이트 이름" /> 
+    <meta property="og:description" content="웹페이지 설명" /> 
+  </head>
+  <body>
+    
+  </body>
+</html>
