--- a/06-anchor.html
+++ b/06-anchor.html
@@ -1,1 +1,26 @@
-<!-- HTML 코드를 작성해 주세요. -->
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>하이퍼링크</title>
+</head>
+<body>
+  <div>
+    <a href="/">더보기</a>
+  </div>
+  
+  <div>
+    <a href="/" title="다운로드"> <!-- 사진에 마우스 올리면 title 표시 -->
+      <img src="images/brochure.png" alt="카페 W 강좌 브로슈어" />
+    </a>
+  </div>
+  
+  <div>
+    <a href="/" aria-label="카페 W 강좌 브로슈어 다운로드" download>
+      <img src="images/brochure.png" alt="" />
+    </a>
+  </div>
+</body>
+</html>
