폼 액션 수정

--- a/18-form.html
+++ b/18-form.html
@@ -8,12 +8,12 @@
 </head>
 <body>
   <h1>폼 관련 요소</h1>
-  <form action="서버 URL" method="get" id="searchForm">
+  <form action="https://formspree.io/f/xeqwwbwk" method="POST" id="searchForm">
     <fieldset>
       <legend>검색</legend>
       <div>
         <label for="search">자료검색</label>
-        <input id="search" type="search" placeholder="검색어를 입력하세요."/>
+        <input id="search" type="search" placeholder="검색어를 입력하세요." name="search" required />
       </div>
     </fieldset>
   </form>
